Fix dropdown color in dark mode

--- a/src/components/TeamModal/TeamModal.scss
+++ b/src/components/TeamModal/TeamModal.scss
@@ -20,6 +20,7 @@
         width: calc(100% + 2rem);
         margin: -1rem;
         padding: 1rem;
+        color: var(--autocomplete-color);
         background-color: var(--body-background-color);
         border-radius: 0 0 $border-radius $border-radius;
     }
